crates/solverforge-macros/tests/ui/fail/problem_fact_unknown_argument.rs
use solverforge_macros::problem_fact;

#[problem_fact(debug)]
struct Worker {
    #[planning_id]
    id: usize,
}

fn main() {}
